2007-11-13  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py (FeedMap.__init__)
	(FeedMap.componentAttached, FeedMap.componentDetached): Maintain
	an ordered list of avatars.
	(FeedMap._recalc): If multiple components supply a feed, prefer
	the one that has been logged in longer.

2007-11-13  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/client.py:
	(Window._admin_connected_cb): Use consistent naming and 
	put private callLater callbacks in nested scopes

	* flumotion/admin/gtk/parts.py:
	* flumotion/test/test_parts.py:
	* tests/ComponentsView.py:
	Rename the ComponentsView signal has-selection to selection-changed,
	which better reflects the arguments given.

2007-11-12  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/client.py:
	Reorder methods, rename to gtk-style namings, mark methods and attributes
	as private, fix imports etc.

2007-11-12  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/misc/porter/porter.py (PorterAvatar.logout)
	(PorterRealm.requestAvatar): More debugging.

	* conf/managers/default/flows/porter.xml: Add http-server to the
	mix.

	* flumotion/component/misc/httpfile/httpfile.py
	(HTTPFileStreamer.do_setup): Pass a valid remote referenceable
	object when we start to log in. Fixes problem where the porter
	thinks we logged out.

2007-11-12  Johan Dahlin  <johan@gnome.org>

	* common/epydoc.mk (EPYDOC_ARGS): Remove the --ignore-mismatch-parameter
	argument which is not present in epydoc 3.0, fixes #783

	* flumotion/common/Makefile.am (flumotion_PYTHON): 
	* flumotion/test/Makefile.am (flumotion_PYTHON): 
	Update, remove removed, add added.

	* flumotion/common/testsuite.py (TestCase): Add a assertFailure
	alias for failUnlessFailure

	* flumotion/commmon/test_*.py: Use testsuite.TestCase, fix imports
	to be pep-8 compatible, get rid of sibling imports, remove unused
	imports. This replaces two old CompatTestCases.

	* flumotion/common/testsuite.py (TestCase): New class with backwards