@@ -1,3 +1,12 @@
+2007-11-13  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/admin/gtk/client.py:
+	* flumotion/admin/gtk/main.py:
+	* flumotion/ui/icons.py:
+
+	Register the window and stock icons, move it to a function
+	to avoid relying on import side effects.
+
 2007-11-13  Andy Wingo  <wingo@pobox.com>
 
 	* flumotion/manager/component.py (FeedMap.__init__)
